// ====================================================================
// HISTORY
// VERSION : 1.1.2 : FA : #7453 : 07/08/2017 : Move adapters folder in client folder
// END-HISTORY
// ====================================================================

// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/BOOLEAN.proto";


package tcHistory.protobuf;

message ExpectedAck {
extensions 4 to 104;

  optional ccsds_mal.protobuf.BOOLEAN acceptance = 1;
  optional ccsds_mal.protobuf.BOOLEAN executionComplete = 2;
  optional ccsds_mal.protobuf.BOOLEAN executionStart = 3;
}
